--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOxOes9H8ftmoOGNDq6GdqP",
+      "authorship_tag": "ABX9TyMe3AS5Vqxz7IbWH/nWfEqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,6 +303,294 @@
           "name": "stdout",
           "text": [
             "No label column found in metadata.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import glob\n",
+        "import librosa\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import soundfile as sf\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tqdm import tqdm\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Define paths\n",
+        "extracted_path = '/content/extracted_audio/'  # Corrected from /content/adress021_data/\n",
+        "output_dir = '/content/processed_features/'\n",
+        "os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "# Load metadata (assuming CSV from Step 1/2)\n",
+        "metadata_path = glob.glob(os.path.join(extracted_path, '**/*.csv'), recursive=True)\n",
+        "if metadata_path:\n",
+        "    metadata = pd.read_csv(metadata_path[0])\n",
+        "    metadata['dx'] = metadata['dx'].astype(str)  # Ensure dx is string\n",
+        "else:\n",
+        "    raise FileNotFoundError(\"Metadata CSV not found in extracted path.\")\n",
+        "\n",
+        "# Find WAV files\n",
+        "audio_files = glob.glob(os.path.join(extracted_path, '**/*.wav'), recursive=True)\n",
+        "print(f\"Found {len(audio_files)} audio files.\")\n",
+        "\n",
+        "# Match audio files with metadata\n",
+        "# Assume adressfname (e.g., adrso024) corresponds to file name (e.g., adrso024.wav)\n",
+        "audio_metadata = []\n",
+        "for audio_file in audio_files:\n",
+        "    fname = os.path.basename(audio_file).replace('.wav', '')\n",
+        "    matching_row = metadata[metadata['adressfname'] == fname]\n",
+        "    if not matching_row.empty:\n",
+        "        audio_metadata.append({\n",
+        "            'file': audio_file,\n",
+        "            'label': matching_row['dx'].iloc[0],\n",
+        "            'mmse': matching_row['mmse'].iloc[0]\n",
+        "        })\n",
+        "audio_metadata = pd.DataFrame(audio_metadata)\n",
+        "print(f\"Matched {len(audio_metadata)} audio files with metadata.\")\n",
+        "\n",
+        "# Limit to a subset for testing\n",
+        "subset_size = 10  # Adjust as needed\n",
+        "audio_metadata = audio_metadata[:subset_size]\n",
+        "print(f\"Processing {len(audio_metadata)} files for testing.\")\n",
+        "\n",
+        "# Preprocessing function for a single audio file\n",
+        "def process_audio(audio_file, sr=16000, skip_noise_removal=True):\n",
+        "    # Load audio\n",
+        "    y, orig_sr = librosa.load(audio_file, sr=sr, mono=True)\n",
+        "\n",
+        "    # Skip noise removal to save time\n",
+        "    y_processed = y if skip_noise_removal else librosa.decompose.nn_filter(y, aggregate=np.median, metric='cosine')\n",
+        "\n",
+        "    # Trim silence\n",
+        "    y_trimmed, _ = librosa.effects.trim(y_processed, top_db=20)\n",
+        "\n",
+        "    # Feature Extraction\n",
+        "    # Acoustic: MFCCs\n",
+        "    mfccs = librosa.feature.mfcc(y=y_trimmed, sr=sr, n_mfcc=13)\n",
+        "    mfccs_mean = np.mean(mfccs, axis=1)\n",
+        "\n",
+        "    # Prosodic: Pitch, Energy\n",
+        "    pitches, magnitudes = librosa.piptrack(y=y_trimmed, sr=sr)\n",
+        "    pitch_mean = np.mean(pitches[pitches > 0]) if np.any(pitches > 0) else 0\n",
+        "    energy = np.mean(librosa.feature.rms(y=y_trimmed))\n",
+        "\n",
+        "    # Linguistic: Placeholder (requires ASR)\n",
+        "    linguistic_features = np.array([0, 0])\n",
+        "\n",
+        "    # Combine features\n",
+        "    features = np.concatenate([mfccs_mean, [pitch_mean, energy], linguistic_features])\n",
+        "\n",
+        "    return y_trimmed, features\n",
+        "\n",
+        "# Process all files\n",
+        "processed_features = []\n",
+        "processed_audio_paths = []\n",
+        "labels = []\n",
+        "\n",
+        "for idx, row in tqdm(audio_metadata.iterrows(), total=len(audio_metadata), desc=\"Processing audio files\"):\n",
+        "    try:\n",
+        "        # Process audio\n",
+        "        y_trimmed, features = process_audio(row['file'])\n",
+        "\n",
+        "        # Save processed audio\n",
+        "        output_path = os.path.join(output_dir, os.path.basename(row['file']))\n",
+        "        sf.write(output_path, y_trimmed, 16000)\n",
+        "\n",
+        "        processed_features.append(features)\n",
+        "        processed_audio_paths.append(output_path)\n",
+        "        labels.append(row['label'])\n",
+        "\n",
+        "        print(f\"Processed: {os.path.basename(row['file'])} (Label: {row['label']})\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {row['file']}: {e}\")\n",
+        "\n",
+        "# Convert to numpy arrays\n",
+        "processed_features = np.array(processed_features)\n",
+        "labels = np.array(labels)\n",
+        "print(f\"Extracted features shape: {processed_features.shape}\")\n",
+        "print(f\"Labels shape: {labels.shape}\")\n",
+        "\n",
+        "# Feature Normalization\n",
+        "if processed_features.size > 0:\n",
+        "    scaler = StandardScaler()\n",
+        "    normalized_features = scaler.fit_transform(processed_features)\n",
+        "\n",
+        "    # Data Augmentation (simple noise addition)\n",
+        "    augmented_features = normalized_features + np.random.normal(0, 0.01, normalized_features.shape)\n",
+        "\n",
+        "    # Export Features\n",
+        "    np.save(os.path.join(output_dir, 'normalized_features.npy'), normalized_features)\n",
+        "    np.save(os.path.join(output_dir, 'augmented_features.npy'), augmented_features)\n",
+        "    np.save(os.path.join(output_dir, 'labels.npy'), labels)\n",
+        "\n",
+        "    # Save processed audio file list and metadata\n",
+        "    audio_metadata.to_csv(os.path.join(output_dir, 'processed_metadata.csv'), index=False)\n",
+        "    with open(os.path.join(output_dir, 'processed_audio_files.txt'), 'w') as f:\n",
+        "        for path in processed_audio_paths:\n",
+        "            f.write(f\"{path}\\n\")\n",
+        "\n",
+        "    print(f\"Features and metadata saved to {output_dir}\")\n",
+        "else:\n",
+        "    print(\"No features extracted. Check audio files and metadata matching.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3x2Yu39P8Rq7",
+        "outputId": "636da264-68a3-4088-b147-6b49bf2495d4"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 271 audio files.\n",
+            "Matched 166 audio files with metadata.\n",
+            "Processing 10 files for testing.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  10%|█         | 1/10 [00:01<00:11,  1.32s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso019.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  20%|██        | 2/10 [00:01<00:05,  1.43it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso316.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  30%|███       | 3/10 [00:01<00:03,  2.05it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso005.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  40%|████      | 4/10 [00:02<00:02,  2.35it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso183.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  50%|█████     | 5/10 [00:02<00:01,  2.65it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso158.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  60%|██████    | 6/10 [00:02<00:01,  2.86it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso002.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  70%|███████   | 7/10 [00:03<00:01,  2.94it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso015.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  90%|█████████ | 9/10 [00:03<00:00,  3.47it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso180.wav (Label: cn)\n",
+            "Processed: adrso186.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files: 100%|██████████| 10/10 [00:04<00:00,  2.30it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso265.wav (Label: cn)\n",
+            "Extracted features shape: (10, 17)\n",
+            "Labels shape: (10,)\n",
+            "Features and metadata saved to /content/processed_features/\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ]
