check unmatched files

--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMe3AS5Vqxz7IbWH/nWfEqp",
+      "authorship_tag": "ABX9TyOvvYj50TtEaKB8YdOaiyuA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -591,6 +591,33 @@
           "name": "stderr",
           "text": [
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "audio_files = glob.glob(os.path.join('/content/extracted_audio/', '**/*.wav'), recursive=True)\n",
+        "metadata = pd.read_csv(glob.glob(os.path.join('/content/extracted_audio/', '**/*.csv'), recursive=True)[0])\n",
+        "audio_fnames = [os.path.basename(f).replace('.wav', '') for f in audio_files]\n",
+        "unmatched = [f for f in audio_fnames if f not in metadata['adressfname'].values]\n",
+        "print(f\"Unmatched files ({len(unmatched)}):\", unmatched[:10])  # Print first 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M0UDVoFE9h_6",
+        "outputId": "422b1db7-d9a4-47d3-f55e-da5547e854f8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unmatched files (105): ['adrspt1', 'adrspt22', 'adrspt28', 'adrspt19', 'adrspt30', 'adrspt12', 'adrspt16', 'adrspt2', 'adrspt4', 'adrspt13']\n"
           ]
         }
       ]
