check label distribution

--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOvvYj50TtEaKB8YdOaiyuA",
+      "authorship_tag": "ABX9TyPmM+51VQx3sQohkokZjnut",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -618,6 +618,34 @@
           "name": "stdout",
           "text": [
             "Unmatched files (105): ['adrspt1', 'adrspt22', 'adrspt28', 'adrspt19', 'adrspt30', 'adrspt12', 'adrspt16', 'adrspt2', 'adrspt4', 'adrspt13']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "metadata = pd.read_csv(glob.glob(os.path.join('/content/extracted_audio/', '**/*.csv'), recursive=True)[0])\n",
+        "print(metadata['dx'].value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E1I1p28U98pm",
+        "outputId": "01b46b78-bd73-4564-d376-ee7715ded9e6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dx\n",
+            "ad    87\n",
+            "cn    79\n",
+            "Name: count, dtype: int64\n"
           ]
         }
       ]
