Confirm the saved features and metadata

--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPmM+51VQx3sQohkokZjnut",
+      "authorship_tag": "ABX9TyP3HJanokpyJbBMm1DIXGVC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -646,6 +646,75 @@
             "ad    87\n",
             "cn    79\n",
             "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "processed_metadata = pd.read_csv('/content/processed_features/processed_metadata.csv')\n",
+        "print(processed_metadata['label'].value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G2lt9y3P-Ey1",
+        "outputId": "484e9e58-9d54-47e0-abcf-4b8bde5b0ab0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "label\n",
+            "cn    10\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "norm_features = np.load('/content/processed_features/normalized_features.npy')\n",
+        "labels = np.load('/content/processed_features/labels.npy')\n",
+        "metadata = pd.read_csv('/content/processed_features/processed_metadata.csv')\n",
+        "print(f\"Features shape: {norm_features.shape}\")\n",
+        "print(f\"Labels: {labels}\")\n",
+        "print(metadata[['file', 'label']])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ao5FmV2z-SHS",
+        "outputId": "1df39ef2-b559-4b51-beae-9c7a6484433c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Features shape: (10, 17)\n",
+            "Labels: ['cn' 'cn' 'cn' 'cn' 'cn' 'cn' 'cn' 'cn' 'cn' 'cn']\n",
+            "                                                file label\n",
+            "0  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "1  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "2  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "3  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "4  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "5  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "6  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "7  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "8  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n",
+            "9  /content/extracted_audio/ADReSSo21/diagnosis/t...    cn\n"
           ]
         }
       ]
