step 4 is correct

--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOy08lBZbLvDeSMIb0IgR3g",
+      "authorship_tag": "ABX9TyMMBH7wwMja4EMQR6yPiULY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -752,6 +752,260 @@
           },
           "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import glob\n",
+        "import librosa\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import soundfile as sf\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tqdm import tqdm\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Define paths\n",
+        "extracted_path = '/content/extracted_audio/'\n",
+        "output_dir = '/content/processed_features/'\n",
+        "os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "# Load metadata\n",
+        "metadata_path = glob.glob(os.path.join(extracted_path, '**/*.csv'), recursive=True)\n",
+        "if metadata_path:\n",
+        "    metadata = pd.read_csv(metadata_path[0])\n",
+        "    metadata['dx'] = metadata['dx'].astype(str)\n",
+        "else:\n",
+        "    raise FileNotFoundError(\"Metadata CSV not found.\")\n",
+        "\n",
+        "# Find WAV files\n",
+        "audio_files = glob.glob(os.path.join(extracted_path, '**/*.wav'), recursive=True)\n",
+        "print(f\"Found {len(audio_files)} audio files.\")\n",
+        "\n",
+        "# Match audio files with metadata\n",
+        "audio_metadata = []\n",
+        "unmatched_files = []\n",
+        "for audio_file in audio_files:\n",
+        "    fname = os.path.basename(audio_file).replace('.wav', '')\n",
+        "    matching_row = metadata[metadata['adressfname'] == fname]\n",
+        "    if not matching_row.empty:\n",
+        "        audio_metadata.append({\n",
+        "            'file': audio_file,\n",
+        "            'label': matching_row['dx'].iloc[0],\n",
+        "            'mmse': matching_row['mmse'].iloc[0]\n",
+        "        })\n",
+        "    else:\n",
+        "        unmatched_files.append(fname)\n",
+        "audio_metadata = pd.DataFrame(audio_metadata)\n",
+        "print(f\"Matched {len(audio_metadata)} audio files with metadata.\")\n",
+        "if unmatched_files:\n",
+        "    print(f\"Unmatched files ({len(unmatched_files)}): {unmatched_files[:10]}...\")\n",
+        "\n",
+        "# Select subset with balanced labels (e.g., 5 cn, 5 ad if possible)\n",
+        "subset_size = 10\n",
+        "if len(audio_metadata['label'].unique()) > 1:\n",
+        "    # Group by label and sample equally\n",
+        "    subset = audio_metadata.groupby('label').apply(lambda x: x.sample(min(len(x), subset_size // len(audio_metadata['label'].unique())))).reset_index(drop=True)\n",
+        "    if len(subset) < subset_size:\n",
+        "        # Fill remaining with random samples\n",
+        "        remaining = audio_metadata[~audio_metadata['file'].isin(subset['file'])].sample(subset_size - len(subset))\n",
+        "        subset = subset.append(remaining).reset_index(drop=True)\n",
+        "    subset = subset[:subset_size]\n",
+        "else:\n",
+        "    subset = audio_metadata[:subset_size]\n",
+        "print(f\"Processing {len(subset)} files for testing. Label distribution:\")\n",
+        "print(subset['label'].value_counts())\n",
+        "\n",
+        "# Preprocessing function\n",
+        "def process_audio(audio_file, sr=16000, skip_noise_removal=True):\n",
+        "    y, orig_sr = librosa.load(audio_file, sr=sr, mono=True)\n",
+        "    y_processed = y if skip_noise_removal else librosa.decompose.nn_filter(y, aggregate=np.median, metric='cosine')\n",
+        "    y_trimmed, _ = librosa.effects.trim(y_processed, top_db=20)\n",
+        "    mfccs = librosa.feature.mfcc(y=y_trimmed, sr=sr, n_mfcc=13)\n",
+        "    mfccs_mean = np.mean(mfccs, axis=1)\n",
+        "    pitches, magnitudes = librosa.piptrack(y=y_trimmed, sr=sr)\n",
+        "    pitch_mean = np.mean(pitches[pitches > 0]) if np.any(pitches > 0) else 0\n",
+        "    energy = np.mean(librosa.feature.rms(y=y_trimmed))\n",
+        "    linguistic_features = np.array([0, 0])\n",
+        "    features = np.concatenate([mfccs_mean, [pitch_mean, energy], linguistic_features])\n",
+        "    return y_trimmed, features\n",
+        "\n",
+        "# Process files\n",
+        "processed_features = []\n",
+        "processed_audio_paths = []\n",
+        "labels = []\n",
+        "\n",
+        "for idx, row in tqdm(subset.iterrows(), total=len(subset), desc=\"Processing audio files\"):\n",
+        "    try:\n",
+        "        y_trimmed, features = process_audio(row['file'])\n",
+        "        output_path = os.path.join(output_dir, os.path.basename(row['file']))\n",
+        "        sf.write(output_path, y_trimmed, 16000)\n",
+        "        processed_features.append(features)\n",
+        "        processed_audio_paths.append(output_path)\n",
+        "        labels.append(row['label'])\n",
+        "        print(f\"Processed: {os.path.basename(row['file'])} (Label: {row['label']})\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {row['file']}: {e}\")\n",
+        "\n",
+        "# Convert to numpy arrays\n",
+        "processed_features = np.array(processed_features)\n",
+        "labels = np.array(labels)\n",
+        "print(f\"Extracted features shape: {processed_features.shape}\")\n",
+        "print(f\"Labels shape: {labels.shape}\")\n",
+        "\n",
+        "# Feature Normalization\n",
+        "if processed_features.size > 0:\n",
+        "    scaler = StandardScaler()\n",
+        "    normalized_features = scaler.fit_transform(processed_features)\n",
+        "    augmented_features = normalized_features + np.random.normal(0, 0.01, normalized_features.shape)\n",
+        "    np.save(os.path.join(output_dir, 'normalized_features.npy'), normalized_features)\n",
+        "    np.save(os.path.join(output_dir, 'augmented_features.npy'), augmented_features)\n",
+        "    np.save(os.path.join(output_dir, 'labels.npy'), labels)\n",
+        "    subset.to_csv(os.path.join(output_dir, 'processed_metadata.csv'), index=False)\n",
+        "    with open(os.path.join(output_dir, 'processed_audio_files.txt'), 'w') as f:\n",
+        "        for path in processed_audio_paths:\n",
+        "            f.write(f\"{path}\\n\")\n",
+        "    print(f\"Features and metadata saved to {output_dir}\")\n",
+        "else:\n",
+        "    print(\"No features extracted. Check audio files and metadata matching.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jidw7usO-gYh",
+        "outputId": "99ee1a1b-2fa2-4eb6-a471-7981da8189a4"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 271 audio files.\n",
+            "Matched 166 audio files with metadata.\n",
+            "Unmatched files (105): ['adrspt1', 'adrspt22', 'adrspt28', 'adrspt19', 'adrspt30', 'adrspt12', 'adrspt16', 'adrspt2', 'adrspt4', 'adrspt13']...\n",
+            "Processing 10 files for testing. Label distribution:\n",
+            "label\n",
+            "ad    5\n",
+            "cn    5\n",
+            "Name: count, dtype: int64\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  10%|█         | 1/10 [00:00<00:01,  4.50it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso071.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  30%|███       | 3/10 [00:00<00:01,  5.09it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso074.wav (Label: ad)\n",
+            "Processed: adrso142.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  40%|████      | 4/10 [00:01<00:01,  3.61it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso116.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  60%|██████    | 6/10 [00:01<00:00,  4.28it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso144.wav (Label: ad)\n",
+            "Processed: adrso169.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  70%|███████   | 7/10 [00:01<00:00,  4.37it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso023.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  80%|████████  | 8/10 [00:02<00:00,  3.77it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso167.wav (Label: cn)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files: 100%|██████████| 10/10 [00:02<00:00,  3.88it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso268.wav (Label: cn)\n",
+            "Processed: adrso160.wav (Label: cn)\n",
+            "Extracted features shape: (10, 17)\n",
+            "Labels shape: (10,)\n",
+            "Features and metadata saved to /content/processed_features/\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
         }
       ]
     }
