--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMpcjjU3LpStuuEsp20JdWG",
+      "authorship_tag": "ABX9TyNjDqnpfufARuSMMto+WJI8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3708,6 +3708,151 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "import joblib\n",
+        "from tqdm import tqdm\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Install required packages\n",
+        "!pip install tensorflow numpy pandas sklearn tqdm joblib\n",
+        "\n",
+        "# Step 5: Train DNN with OpenSMILE Features\n",
+        "\n",
+        "# Define paths\n",
+        "output_dir = '/content/processed_features/'\n",
+        "\n",
+        "# Load features and labels from Step 4\n",
+        "normalized_features = np.load(os.path.join(output_dir, 'opensmile_features.npy'))\n",
+        "labels = np.load(os.path.join(output_dir, 'labels.npy'))\n",
+        "audio_metadata = pd.read_csv(os.path.join(output_dir, 'processed_metadata.csv'))\n",
+        "\n",
+        "print(f\"Loaded features shape: {normalized_features.shape}\")\n",
+        "print(f\"Labels shape: {labels.shape}\")\n",
+        "print(\"Label distribution:\", dict(zip(*np.unique(labels, return_counts=True))))\n",
+        "\n",
+        "# Encode labels (ad=1, cn=0)\n",
+        "y = np.where(labels == 'ad', 1, 0)\n",
+        "\n",
+        "# Train-Test Split\n",
+        "X_train, X_val, y_train, y_val = train_test_split(\n",
+        "    normalized_features, y, test_size=0.2, stratify=y, random_state=42\n",
+        ")\n",
+        "print(f\"Training set: {X_train.shape}, Validation set: {X_val.shape}\")\n",
+        "print(\"Training label distribution:\", dict(zip(*np.unique(y_train, return_counts=True))))\n",
+        "\n",
+        "# Build DNN model\n",
+        "model = Sequential([\n",
+        "    Dense(128, activation='relu', input_shape=(X_train.shape[1],)),\n",
+        "    Dropout(0.3),\n",
+        "    Dense(64, activation='relu'),\n",
+        "    Dropout(0.3),\n",
+        "    Dense(32, activation='relu'),\n",
+        "    Dropout(0.2),\n",
+        "    Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "# Compile model\n",
+        "model.compile(\n",
+        "    optimizer='adam',\n",
+        "    loss='binary_crossentropy',\n",
+        "    metrics=['accuracy']\n",
+        ")\n",
+        "\n",
+        "# Define early stopping\n",
+        "early_stopping = EarlyStopping(\n",
+        "    monitor='val_loss',\n",
+        "    patience=10,\n",
+        "    restore_best_weights=True\n",
+        ")\n",
+        "\n",
+        "# Train model\n",
+        "history = model.fit(\n",
+        "    X_train, y_train,\n",
+        "    validation_data=(X_val, y_val),\n",
+        "    epochs=100,\n",
+        "    batch_size=16,\n",
+        "    callbacks=[early_stopping],\n",
+        "    verbose=1\n",
+        ")\n",
+        "\n",
+        "# Evaluate model\n",
+        "y_pred_prob = model.predict(X_val)\n",
+        "y_pred = (y_pred_prob > 0.5).astype(int).flatten()\n",
+        "\n",
+        "accuracy = accuracy_score(y_val, y_pred)\n",
+        "precision = precision_score(y_val, y_pred, zero_division=0)\n",
+        "recall = recall_score(y_val, y_pred, zero_division=0)\n",
+        "f1 = f1_score(y_val, y_pred, zero_division=0)\n",
+        "\n",
+        "print(f\"Validation Results:\")\n",
+        "print(f\"Accuracy: {accuracy:.4f} (Reference: 0.789, GMM-UBM: 0.6765)\")\n",
+        "print(f\"Precision: {precision:.4f}\")\n",
+        "print(f\"Recall: {recall:.4f}\")\n",
+        "print(f\"F1-Score: {f1:.4f}\")\n",
+        "\n",
+        "# Plot training history\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.figure(figsize=(12, 4))\n",
+        "\n",
+        "# Accuracy plot\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+        "plt.plot(history.history['val_accuracy'], label='Val Accuracy')\n",
+        "plt.title('Model Accuracy')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# Loss plot\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(history.history['loss'], label='Train Loss')\n",
+        "plt.plot(history.history['val_loss'], label='Val Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(os.path.join(output_dir, 'training_history.png'))\n",
+        "plt.show()\n",
+        "\n",
+        "# Save model and metadata\n",
+        "model.save(os.path.join(output_dir, 'dnn_model.h5'))\n",
+        "np.save(os.path.join(output_dir, 'dnn_labels.npy'), y)\n",
+        "audio_metadata.to_csv(os.path.join(output_dir, 'processed_metadata.csv'), index=False)\n",
+        "print(f\"Model, labels, and metadata saved to {output_dir}\")"
+      ],
+      "metadata": {
+        "id": "5AbYXxuGRqkK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "02-X0eySSooI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
